# CPP-preparations

./: .gitignore  Makefile  fp  input.txt  output.txt  pyproject.toml  tokens.txt
code/: bot  bot.cpp  file_processing.cpp  fp  hello  output.txt
compile/: fpp
compiled/: fp
docs/: README.markdown  equials.markdown  vars.markdown
docs/.ipynb_checkpoints/: README-checkpoint.markdown
